--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -15,7 +15,10 @@
         @include flexCenter(row);
         form{
             position: relative;
+            width: 50%;
             margin-top: 2rem;
+            min-width: 250px;
+            max-width: 600px;
             .contact__form_control{
                 margin-bottom: 1.8rem;
                 position: relative;
@@ -23,7 +26,6 @@
             input, textarea{
                 position: relative;
                 width: 100%;
-                max-width: 700px;
                 padding: .6rem;
                 background-color: #020B1D;
                 border-radius: 1rem;
@@ -43,15 +45,13 @@
             }
             .form__submit{
                 width: 100%;
-                max-width: 700px;
+                
                 padding: 1rem;
                 background-color: $cta-color;
                 color: $bg-color;
                 border-radius: 2rem;
                 border: none;
-
                 box-shadow: 0 1px 10px #001D57, 0 1px 5px #2F1484;
-
                 font-weight: bold;
                 font-size: 1.2rem;
             }
@@ -78,7 +78,7 @@
             justify-content: center;
             width: 50%;
             max-width: 500px;
-            min-width: 230px;
+            min-width: 250px;
             margin: 0 auto;
             padding: .6rem;
             background-color: #020B1D;
