design thumbnail added

--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -19,6 +19,7 @@
             margin-top: 2rem;
             min-width: 250px;
             max-width: 600px;
+            font-family: 'Univa Nova', normal;
             .contact__form_control{
                 margin-bottom: 1.8rem;
                 position: relative;
