--- a/assets/styles/sections/services_section.scss
+++ b/assets/styles/sections/services_section.scss
@@ -5,19 +5,19 @@
         text-align: center;
         margin-bottom: 2rem;
         font-family: 'aironedemo', normal;
+        font-size: 2rem;
     }
     .services__card-container{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         position: relative;
 
         padding: 2rem;
         @media (min-width: 490px){
-            flex-direction: row;
-            
-    }
+            flex-direction: row;   
+        }
     }
 }
