responsive font size

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,7 +1,7 @@
 // colors
 
 $bg-color: #01060f;
-$bg-light: #02112E;
+$bg-light: #010d24;
 $primary-color: #001D57;
 $secondary-color: #2F1484;
 $secondary-light: #6820FF;
@@ -12,9 +12,10 @@ $tertiary-color: #01BCC9;
 // font metrics
 $text-color: #c4e6fa;
 $font-sizes: (
-    "regular": 1em,
-    "medium": 1.5em,
-    "large": 2em
+    "mini": 0.8rem,
+    "regular": 1rem,
+    "medium": 1.5rem,
+    "large": 2rem
 );
 
 
