--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -15,6 +15,10 @@
         color: $secondary-color;
         font-family: 'aironedemo', normal;
         font-size: 12em;
+        @media (max-width: 490px) {
+            font-size: 5rem;
+            top: 0;
+        }
     }
 
     .portfolio__latest-work{
@@ -26,7 +30,6 @@
             @media(max-width: 490px){
                 flex-direction: column;
                 align-content: center;
-                justify-content: center;
             }
         }
         h2{
