--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -3,7 +3,8 @@
 .social__section{
     width: 100%;
     position: relative;
-    background-color: $bg-light;
+    // background-color: $bg-light;
+    background: linear-gradient(180deg, #01091a 20%, #2e148486 40%, #01091a 100%);
     @include flexCenter(column);
 
     .social__section_divider-top {
@@ -56,6 +57,9 @@
             margin-bottom: 1.5rem;
             text-align: center;
             font-family: 'aironedemo', normal;
+            @media (max-width: 490px) {
+                font-size: 0.8rem;
+            }
         }
 
         p{
@@ -65,7 +69,7 @@
         .twitter__info{
             position: relative;
             background-color: $bg-color;
-            border: 2px solid $secondary-color;
+            border: 2px solid $cta-color;
             padding: 1.5rem;
             margin-bottom: 2rem;
             max-width: 90%;
@@ -81,23 +85,33 @@
                 font-size: .75em;
                 align-self: baseline;
                 li{
-                    color: $secondary-color;
+                    color: $cta-color;
                     margin-bottom: .5rem;
+                    font-size: 1.5rem;
+                    // text-decoration: underline;
+                    @media (max-width: 490px) {
+                        font-size: 1rem;
+                    }
                 }
             }
             .twitter__btn{
                 @include flexCenter(row);
                 position: absolute;
-                left: 92%;
+                left: 95%;
                 top: 88%;
                 width: 95px;
                 height: 95px;
                 border-radius: 50%;
-                border: 2px solid $secondary-color;
+                border: 2px solid $cta-color;
                 background-color: $bg-color;
 
                cursor: pointer;
 
+               @media (max-width: 490px) {
+                    width: 70px;
+                    height: 70px;
+                    left: 90%;
+                }
                 #twitter-logo{
                     width: 50%;
                 }
