--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -7,7 +7,7 @@
     
     h2{
         text-align: center;
-        font-family: 'aironedemo', normal;
+        // font-family: 'aironedemo', normal;
         font-size: 2rem;
         @media (max-width: 490px) {
             font-size: 1rem;
