--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -139,6 +139,7 @@ header {
         font-size: 3rem;
         @media (max-width: 490px) {
             font-size: 2rem;
+            font-family: 'Univa Nova', normal;
         }
     }
 
