feat:button hover animations

--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -35,7 +35,7 @@
         h2{
             color: $text-color;
             margin-bottom: 3rem;
-            font-family: 'aironedemo', normal;
+            // font-family: 'aironedemo', normal;
             font-size: 2rem;
         }
     }
