--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -54,6 +54,7 @@
          @include flexCenter(column);
 
         h2{
+            font-size: 2rem;
             margin-bottom: 2rem;
             text-align: center;
             // font-family: 'aironedemo', normal;
@@ -122,6 +123,7 @@
     .social__others{
         @include flexCenter(column);
         margin-bottom: 1rem;
+        margin-top: 8rem;
         h3{
             margin-bottom: 1rem;
         }
@@ -132,13 +134,12 @@
                 margin-left: 2rem;
                 padding: .5rem;
                 border-radius: 50px;
-                background-color: $bg-color;
-                color: $text-color;
+                color: $cta-color;
 
-                text-decoration: none;
+                text-decoration: underline;
 
                 img{
-                    margin-left: .5rem;
+                    margin-right: .3rem;
                 }
             }
         }
