--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -138,7 +138,8 @@ header {
         font-family: 'aironedemo', normal;
         font-size: 3rem;
         @media (max-width: 490px) {
-            font-size: 2rem;
+            font-size: 1.5rem;
+            text-align: center;
             font-family: 'Univa Nova', normal;
         }
     }
