--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -127,6 +127,13 @@
                         transform: rotate(20deg);
                         animation-play-state: paused
                     }
+
+                    #twitter_logo_path{
+                        @include transitionBackIn;
+                        &:hover{
+                            animation: filled 1s ease-in  1 alternate forwards;
+                        }
+                    }
                 }
             }
         }
@@ -171,12 +178,17 @@
     100%{color: $tertiary-color;}
 }
 
+@keyframes filled {
+    0%{fill: $cta-color}
+    25%{fill: $secondary-light;}
+    50%{fill: $tertiary-color;}
+    100%{fill: $cta-color}
+}
+
 @keyframes shake {
     0%{ transform: rotate(0deg);}
     25%{ transform: rotate(3deg);}
-    30%{ transform: scale(1.1);}
     50%{ transform: rotate(-3deg);}
-    60%{ transform: scale(1);}
     75%{ transform: rotate(3deg);}
     100%{ transform: rotate(0deg);}
 }
