--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -4,6 +4,7 @@
 .contact__section{
     padding: 2rem;
     margin-top: 10.5rem;
+    position: relative;
     
     h2{
         text-align: center;
@@ -49,6 +50,7 @@
                 }
             }
             .form__submit{
+                @include transitionBackIn;
                 width: 100%;
                 
                 padding: 1rem;
@@ -59,6 +61,11 @@
                 box-shadow: 0 1px 10px #001D57, 0 1px 5px #2F1484;
                 font-weight: bold;
                 font-size: 1.2rem;
+
+                &:hover{
+                    transform: scale(1.1);
+                    animation: colored 1s ease-in  infinite alternate forwards;
+                }
             }
             label{
                 position: absolute;
@@ -70,10 +77,22 @@
                 transition: .2s all ease-in-out;
             }
         }
-    }    
+    }
+    
+    #contact_stroke{
+        position: absolute;
+        left: 50%;
+        top: 60%;
+        @media (max-width: 490px) {
+            display: none;
+        }
+    }
     .contact__email{
         padding: 2rem;
-        margin-top: 10rem;
+        margin-top: 15rem;
+        @media (max-width: 490px) {
+            margin-top: 8rem;
+        }
         h2{
             margin-bottom: 1rem;
         }
@@ -91,4 +110,10 @@
             border: 2px solid #180D4D;
         }
     } 
+}
+
+@keyframes colored {
+    0%{background-color: $cta-color;}
+    50%{background-color: $secondary-light;}
+    100%{background-color: $tertiary-color;}
 }
