--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -137,6 +137,7 @@ header {
         // font-family: 'Bungee', cursive;
         font-family: 'aironedemo', normal;
         font-size: 3rem;
+        clip-path: polygon(22% 100%, 75% 100%, 100% 100%, 0% 100%);
         @media (max-width: 490px) {
             font-size: 1.5rem;
             text-align: center;
