--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -139,6 +139,22 @@
         }
     }
 
+    #social_media_stroke_1{
+        position: absolute;
+        top: 85%;
+        left: 63%;
+        width: 25%;
+        @media (max-width: 490px) {
+            display: none;
+        }
+    }
+
+    #social_media_stroke_2{
+        @media (max-width: 490px) {
+            display: none;
+        }
+    }
+
     .social__others{
         @include flexCenter(column);
         margin-bottom: 1rem;
