fix:design thumbnails better view

--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -30,6 +30,7 @@
             @media(max-width: 490px){
                 flex-direction: column;
                 align-content: center;
+                justify-content: space-between;
             }
         }
         h2{
