--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -35,7 +35,7 @@
                 padding: .6rem;
                 background-color: #020B1D;
                 border-radius: 1rem;
-                border: 2px solid #180D4D;
+                border: 2px solid #00a2ff84;
 
                 color: $text-color;
 
@@ -64,6 +64,8 @@
                 font-weight: bold;
                 font-size: 1.2rem;
 
+                cursor: pointer;
+
                 &:hover{
                     transform: scale(1.1);
                     animation: colored 1s ease-in  infinite alternate forwards;
@@ -81,9 +83,10 @@
         }
     }
     
-    .contact__email{
+    .contact__dm{
         padding: 2rem;
         margin-top: 5rem;
+        @include flexCenter(column);
         @media (max-width: 490px) {
             margin-top: 8rem;
         }
@@ -91,18 +94,18 @@
             margin-bottom: 1rem;
         }
 
-        .email__container{
-            display: flex;
-            justify-content: center;
-            width: 50%;
-            max-width: 500px;
-            min-width: 250px;
-            margin: 0 auto;
-            padding: .6rem;
-            background-color: #020B1D;
-            border-radius: 2rem;
-            border: 2px solid #180D4D;
-        }
+        // .email__container{
+        //     display: flex;
+        //     justify-content: center;
+        //     width: 50%;
+        //     max-width: 500px;
+        //     min-width: 250px;
+        //     margin: 0 auto;
+        //     padding: .6rem;
+        //     background-color: #020B1D;
+        //     border-radius: 2rem;
+        //     border: 2px solid #180D4D;
+        // }
     } 
 }
 
