--- a/assets/styles/sections/footer.scss
+++ b/assets/styles/sections/footer.scss
@@ -78,7 +78,7 @@ footer {
 
                 &:hover{
                     transform: translateY(-5px);
-                    filter: drop-shadow(0 3px 5px $primary-color);
+                    filter: drop-shadow(0 3px 5px $cta-color);
                 }
             }
         }
