--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -81,7 +81,7 @@
                 width: 95%;
             }
 
-            .twitter__feed{
+            .twitter__threads{
                 padding: 1rem;
                 font-size: .75em;
                 align-self: baseline;
