--- a/assets/styles/sections/about-me_section.scss
+++ b/assets/styles/sections/about-me_section.scss
@@ -3,34 +3,44 @@
 .about_blobs {
     width: 100%;
     position: relative;
-    padding: 3rem;
+    padding: 1rem;
 
     #blob-left-corner {
-        position: relative;
-        width: 80%;
+        position: absolute;
+        width: 70%;
         transform: translateX(-180px);
         
+        @media (min-width: 490px){
+            transform: translateX(-150px);
+        }
+        @media (min-width: 1450px){
+            width: 1250px;
+        }
     } 
     
     #blob-left-corner-shadow {
         position: absolute;
-        width: 70%;
+        width: 60%;
         left: -160px;
         top: 25%;
         z-index: -1;
+        @media (min-width: 1450px){
+            width: 1250px;
+            top: 20%;
+        }
     }
 }
 
 .about_section {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
     position: relative;
-    margin: 0 auto;
-
+    
+    margin-top: 10rem;
     // el error
     //top: 150px;
     padding: 2rem;
@@ -38,6 +48,11 @@
     @media (min-width: 490px){
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    @media (min-width: 1450px){
+        margin-top: 15rem;
+        padding: 5rem;
     }
     
     .about_profile-picture-wrapper{
@@ -47,6 +62,9 @@
             //box-shadow: 5px 5px 0px $secondary-color, -5px -5px 0px $secondary-color;
             @media(max-width: 490px){
                 width: 15em;
+            }
+            @media (min-width: 1450px){
+                width: 35em
             }
         }
 
@@ -81,6 +99,10 @@
             font-size: 1.5rem;
             @media(max-width: 490px){
                 font-size: 1rem;
+            }
+            @media (min-width: 1450px){
+                font-size: 2.5rem;
+                line-height: 2.75rem;
             }
         }
         .about__text_tagline{
