--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -48,6 +48,10 @@ header {
         left: 60%;
 
         z-index: -1;
+
+        @media (min-width: 1450px){
+            width: 1650px;
+        }
     }
 
     #blob-stroke {
@@ -57,6 +61,9 @@ header {
         left: 55%;
         top: .1%;
         z-index: -1;
+        @media (min-width: 1450px){
+            width: 1650px;
+        }
     }
 
     #blue_cross {
@@ -77,6 +84,9 @@ header {
         left: 50%;
         overflow: hidden;
         z-index: -2;
+        @media (min-width: 1450px){
+            width: 1650px;
+        }
     }
 }
 
@@ -84,10 +94,19 @@ header {
     position: relative;
     // el bug mojoso
     // top: 2em;
-    width: 90%;
-    margin: 0 auto;
+
+    //original width 90%
+    width: 100%;
+
+    margin-top: 7rem;
     @include flexCenter(column);
-    padding: 3rem;
+    padding: 2rem;
+    @media (max-width: 490px){
+        margin-top: 5rem;
+    }
+    @media (min-width: 1450px){
+        margin-top: 10rem;
+    }
     h2 {
         margin-bottom: 2rem;
         // font-family: 'Bungee', cursive;
@@ -100,6 +119,9 @@ header {
             text-align: center;
             font-family: 'Univa Nova', normal;
             font-weight: bold;
+        }
+        @media (min-width: 1450px){
+            font-size: 3rem;
         }
     }
 
@@ -118,6 +140,7 @@ header {
     #blob-text-shadow {
         width: 30%;
         position: absolute;
+        z-index: -1;
     }
 
     #blue_cross3 {
