--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -87,9 +87,14 @@
                 align-self: baseline;
                 li{
                     color: $cta-color;
+                    -webkit-appearance: none;
                     margin-bottom: .5rem;
                     font-size: 1.5rem;
                     // text-decoration: underline;
+
+                    a{
+                        -webkit-appearance: none;
+                    }
                     @media (max-width: 490px) {
                         font-size: 1rem;
                     }
