--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -49,6 +49,8 @@ header {
 
         z-index: -1;
 
+        filter: blur(70px);
+
         @media (min-width: 1450px){
             width: 1650px;
         }
@@ -61,6 +63,8 @@ header {
         left: 55%;
         top: .1%;
         z-index: -1;
+
+        filter: blur(10px);
         @media (min-width: 1450px){
             width: 1650px;
         }
@@ -84,6 +88,8 @@ header {
         left: 50%;
         overflow: hidden;
         z-index: -2;
+
+        filter: blur(70px);
         @media (min-width: 1450px){
             width: 1650px;
         }
@@ -141,6 +147,8 @@ header {
         width: 30%;
         position: absolute;
         z-index: -1;
+
+        filter: blur(5px);
     }
 
     #blue_cross3 {
