fix:sections refactor

--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -91,7 +91,8 @@
             margin-top: 8rem;
         }
         h2{
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
+            font-family: 'Clash Display', normal;
         }
 
         // .email__container{
