--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -58,7 +58,7 @@
         h2{
             color: $text-color;
             margin-bottom: 3rem;
-            // font-family: 'aironedemo', normal;
+            font-family: 'Clash Display', normal;
             font-size: 2rem;
         }
     }
