--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -57,7 +57,7 @@
             font-size: 2rem;
             margin-bottom: 2rem;
             text-align: center;
-            // font-family: 'aironedemo', normal;
+            font-family: 'Clash Display', normal;
             @media (max-width: 490px) {
                 font-size: 1rem;
             }
@@ -70,7 +70,8 @@
         .twitter__info{
             position: relative;
             background-color: $bg-color;
-            border: 2px solid $cta-color;
+            // border: 2px solid $cta-color;
+            box-shadow: 0 5px 30px #2e148486;
             padding: 1.5rem;
             margin-bottom: 2rem;
             max-width: 90%;
