--- a/assets/styles/sections/about-me_section.scss
+++ b/assets/styles/sections/about-me_section.scss
@@ -47,7 +47,7 @@
     margin-top: 10rem;
     // el error
     //top: 150px;
-    padding: 2rem;
+    padding: 2rem 3rem 2rem 3rem;
 
     @media (min-width: 490px){
         flex-direction: row;
@@ -77,6 +77,7 @@
             width: 20%;
             left: 90%;
             top: -7%;
+            filter: blur(5px);
         }
         @media(min-width: 490px){
             order: 2;
@@ -126,5 +127,12 @@
             z-index: 2;
         }
 
+    }
+
+    #bubbles{
+        max-width: 90%;
+        left: 2%;
+        top: 40%;
+        position: absolute;
     }
 }
