--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -15,6 +15,7 @@
         color: $secondary-color;
         font-family: 'aironedemo', normal;
         font-size: 12em;
+        letter-spacing: 0.150em;
         @media (max-width: 490px) {
             font-size: 5rem;
             top: 0;
