update:portfolio section layout done

--- a/assets/styles/sections/referals_section.scss
+++ b/assets/styles/sections/referals_section.scss
@@ -35,6 +35,7 @@
         height: 150px;
         background-image: url("https://ik.imagekit.io/u33i3sss0/Portfolio_Website/5ZhB2ZTV_400x400_nPS1RsE3i.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1675099106099");
         background-size: contain;
+        border-radius: 50px;
     }
 
     p{
