--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -37,11 +37,65 @@
             .portfolio__case_studies{
                 margin-bottom: 2rem;
 
-                .case_studies__img{
+                .main__link{
+                    position: relative;
+
+                    p{
+                        position: absolute;
+                        top: -30px;
+                        left: 5%;
+
+                        font-family: 'Clash Display';
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 5rem;
+
+                        color: #FFFFFF;
+                        text-shadow: 0px 4px 50px #000000;
+                    }
+
+                    .main__img{
+                        position: relative;
+                        width: 100%;
+                        border-radius: 10px;
+                        box-shadow: 0px 5px 50px rgba(36, 216, 255, 0.5);
+                    }
+                }
+
+                .portfolio__samples{
                     position: relative;
                     width: 100%;
-                    border-radius: 10px;
+                    
+
+                    .sample{
+                        margin-top: 10rem;
+                        position: relative;
+                        width: 100%;
+
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+
+                        h2{
+                            margin-bottom: .5rem;
+                        }
+
+                        p{
+                            font-family: 'Clash Display', normal; 
+                        }
+
+                        .sample__img{
+                            width: 100%;
+                            border-radius: 10px; 
+                            box-shadow: 0px 5px 30px rgba(0, 108, 133, 0.5);
+                        }
+
+                        .sample__link{
+                            width: 50%;
+                        }
+                    }
                 }
+                
             }
         }
         h2{
@@ -59,8 +113,13 @@
     }
 
 
+
+
+
+
+
     .portfolio__projects{
-        margin-top: 15rem;
+        margin-top: 12rem;
 
         h2{
             font-family: 'Clash Display', normal;
