--- a/assets/styles/sections/footer.scss
+++ b/assets/styles/sections/footer.scss
@@ -3,8 +3,8 @@
 @import 'assets/mixins';
 
 footer {
-  background: rgb(1,7,19);
-  background: linear-gradient(180deg, $bg-color 0%, #020f29 100%);
+//   background: rgb(1,7,19);
+//   background: linear-gradient(180deg, $bg-color 0%, #020f29 100%);
   width: 100%;
   height: 200px;
 
