--- a/assets/styles/sections/contact_section.scss
+++ b/assets/styles/sections/contact_section.scss
@@ -5,24 +5,38 @@
     padding: 2rem 4rem 4rem 3rem;
     margin-top: 15.5rem;
     position: relative;
+
+    @media (max-width: 490px) {
+        padding: 2rem 2.5rem 2rem 2.5rem;
+    }
     
     h2{
         font-family: 'Clash Display', normal;
         font-size: 3rem;
         margin-bottom: 2rem;
         @media (max-width: 490px) {
-            font-size: 1rem;
+            font-size: 2rem;
         }
     }
 
     .contact{
         display: flex;
         justify-content: space-around;
+
+        @media (max-width: 490px) {
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
+        }
         
 
         .contact__info{
             width: 50%;
             margin-top: 2rem;
+            @media (max-width: 490px) {
+                width: 100%;
+                margin-top: 5rem;
+            }
             p{
                 font-family: 'Clash Display', normal;
                 font-size: 1.8rem;
@@ -32,13 +46,14 @@
             .contact__dm{
                 margin-top: 2rem;
                 margin-bottom: 2rem;
+                @media (max-width: 490px) {
+                    margin-top: 3rem;
+                }
                 
                 a{
                     margin-top: 1rem;
                 }
-                @media (max-width: 490px) {
-                    margin-top: 8rem;
-                }
+                
                 h2{
                     margin-bottom: 2rem;
                     font-family: 'Clash Display', normal;
@@ -71,6 +86,9 @@
             position: relative;
             width: 50%;
             // @include flexCenter(row);
+            @media (max-width: 490px) {
+                width: 100%;
+            }
             form{
                 position: relative;
                 
