--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -52,6 +52,11 @@
 
                         color: #FFFFFF;
                         text-shadow: 0px 4px 50px #000000;
+
+                        @media (max-width: 490px) {
+                            top: 0px;
+                            font-size: 2rem;
+                        }
                     }
 
                     .main__img{
@@ -76,8 +81,23 @@
                         justify-content: space-between;
                         align-items: center;
 
+                        @media (max-width: 490px) {
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: flex-start;
+
+                            margin-top: 5rem;
+                        }
+
+                        .sample_description{
+                            
+                        }
+
                         h2{
                             margin-bottom: .5rem;
+                            @media (max-width: 490px) {
+                                font-size: 2rem;
+                            }
                         }
 
                         p{
@@ -88,10 +108,18 @@
                             width: 100%;
                             border-radius: 10px; 
                             box-shadow: 0px 5px 30px rgba(0, 108, 133, 0.5);
+                            
+
+                            @media (max-width: 490px) {
+                                margin-top: 1rem;
+                            }
                         }
 
                         .sample__link{
                             width: 50%;
+                            @media (max-width: 490px) {
+                                width: 85%;
+                            }
                         }
                     }
                 }
@@ -111,10 +139,6 @@
         margin-top: 2rem;
         margin-bottom: 2rem;
     }
-
-
-
-
 
 
 
