--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -6,24 +6,25 @@
     background-color: $bg-color;
     padding: 3rem 4rem 3rem 4rem;
     
-    #portfolio_water-mark{
-        position: absolute;
-        top: -50px;
-        right: 1%;
-        left: 1%;
-        opacity: .1;
-        color: $secondary-color;
-        font-family: 'aironedemo', normal;
-        font-size: 12em;
-        letter-spacing: 0.150em;
-        @media (max-width: 490px) {
-            font-size: 5rem;
-            top: 0;
-        }
-    }
+    // #portfolio_water-mark{
+    //     position: absolute;
+    //     top: -50px;
+    //     right: 1%;
+    //     left: 1%;
+    //     opacity: .1;
+    //     color: $secondary-color;
+    //     font-family: 'aironedemo', normal;
+    //     font-size: 12em;
+    //     letter-spacing: 0.150em;
+    //     @media (max-width: 490px) {
+    //         font-size: 5rem;
+    //         top: 0;
+    //     }
+    // }
 
     .portfolio__latest-work{
         position: relative;
+        margin-top: 7rem;
         .portfolio__case_studies_wrapper{
             
 
@@ -39,6 +40,7 @@
 
                 .main__link{
                     position: relative;
+                    
 
                     p{
                         position: absolute;
@@ -60,6 +62,7 @@
                     }
 
                     .main__img{
+                        clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
                         position: relative;
                         width: 100%;
                         border-radius: 10px;
