--- a/assets/styles/sections/social-media_section.scss
+++ b/assets/styles/sections/social-media_section.scss
@@ -54,13 +54,21 @@
          @include flexCenter(column);
 
         h2{
+            margin-top: 5rem;
             font-size: 2rem;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
             text-align: center;
             font-family: 'Clash Display', normal;
             @media (max-width: 490px) {
                 font-size: 1rem;
             }
+        }
+
+        h3{
+            font-size: 2rem;
+            font-family: 'Clash Display', normal;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
         }
 
         p{
@@ -75,7 +83,7 @@
             box-shadow: 0 5px 30px #2e148486;
             padding: 1.5rem;
             margin-bottom: 2rem;
-            max-width: 90%;
+            max-width: 80%;
             @include flexCenter(column);
 
             #twitter-banner{
@@ -148,7 +156,7 @@
 
     .social__others{
         @include flexCenter(column);
-        margin-bottom: 1rem;
+        margin-bottom: 5rem;
         margin-top: 3rem;
         h3{
             margin-bottom: 1rem;
