--- a/assets/styles/sections/hero_section.scss
+++ b/assets/styles/sections/hero_section.scss
@@ -24,6 +24,7 @@
         margin-top: 10rem;
     }
     h2 {
+        z-index: 2;
         position: relative;
         margin-bottom: 1rem;
 
@@ -63,9 +64,9 @@
         // }
     }
 
-    hr{
-        color: white;
-    }
+    // hr{
+    //     color: white;
+    // }
 
     .char{
         transform: translateY(100px);
@@ -93,7 +94,7 @@
     #blob-text-shadow {
         width: 30%;
         position: absolute;
-        z-index: -1;
+        z-index: 1;
 
         filter: blur(1px);
     }
@@ -102,7 +103,7 @@
         max-width: 80%;
         position: absolute;
         
-        z-index: 0;
+        z-index: 1;
     }
 
     .hero__cta-button {
@@ -110,6 +111,7 @@
         gap: 2rem;
         align-items: center;
         margin-top: 2.5rem;
+        z-index: 2;
     }
 }
 
