--- a/assets/styles/sections/portfolio_section.scss
+++ b/assets/styles/sections/portfolio_section.scss
@@ -38,9 +38,15 @@
             .portfolio__case_studies{
                 margin-bottom: 2rem;
 
+                // .portfolio__main{
+                //     display: flex;
+                //     justify-content: center;
+                //     align-items: flex-start;
+                // }
+
                 .main__link{
                     position: relative;
-                    
+                    width: 85%;
 
                     p{
                         position: absolute;
@@ -64,7 +70,7 @@
                     .main__img{
                         clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
                         position: relative;
-                        width: 100%;
+                        width: 85%;
                         border-radius: 10px;
                         // box-shadow: 0px 5px 50px rgba(36, 216, 255, 0.5);
                     }
@@ -109,7 +115,8 @@
 
                         .sample__img{
                             width: 100%;
-                            border-radius: 10px; 
+                            border-radius: 10px;
+                            clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%); 
                             // box-shadow: 0px 5px 30px rgba(0, 108, 133, 0.5);
                             
 
@@ -119,7 +126,7 @@
                         }
 
                         .sample__link{
-                            width: 65%;
+                            width: 55%;
                             @media (max-width: 490px) {
                                 width: 85%;
                             }
