feat:case studies component

--- a/assets/styles/sections/about-me_section.scss
+++ b/assets/styles/sections/about-me_section.scss
@@ -86,7 +86,7 @@
     
 
     .about_text {
-        font-family: 'Archivo', normal;
+        font-family: 'Clash Display', normal;
         
         @media(min-width: 490px){
             p{
