--- a/assets/styles/sections/referals_section.scss
+++ b/assets/styles/sections/referals_section.scss
@@ -34,7 +34,7 @@
     align-items: center;
 
     @media (max-width: 490px) {
-        width: 70%;
+        width: 90%;
         padding: 2rem;
     }
 
@@ -46,14 +46,18 @@
         border-radius: 50px;
 
         @media (max-width: 490px) {
-            width: 100px;
-            height: 100px;
+            width: 90px;
+            height: 90px;
         }
     }
 
     p{
         text-align: center;
         margin-top: 1rem;
+
+        @media (max-width: 490px) {
+            font-size: .85rem;
+        }
     }
 
     #referal_name{
